src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Campaign Lead</fullName>
        <description>Lead generated by Marketo or Salesforce campaign</description>
        <isActive>true</isActive>
        <values>
            <fullName>Allocated</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Disqualified by sales</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualified %28convert lead%29</fullName>
        </values>
        <values>
            <fullName>Qualified by customer contact</fullName>
        </values>
        <values>
            <fullName>Qualified by lead information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PostNord Lead</fullName>
        <description>Lead created by a CRM user</description>
        <isActive>true</isActive>
        <values>
            <fullName>Allocated</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Disqualified by sales</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Qualified %28convert lead%29</fullName>
        </values>
        <values>
            <fullName>Qualified by customer contact</fullName>
        </values>
        <values>
            <fullName>Qualified by lead information</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Involved_Party_ID__c</fullName>
        <description>P</description>
        <formula>Account__r.Involved_Party_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matching work sites for your search</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Work Site</value>
            </filterItems>
            <infoMessage>You can only relate a work site account to a lead</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_C_O__c</fullName>
        <label>Address C/O</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_House_Number_Supplement__c</fullName>
        <label>Address House Number Supplement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_House_Number__c</fullName>
        <label>Address House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_PO_Box__c</fullName>
        <label>Address PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postal_Code__c</fullName>
        <label>Address Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Room_Number__c</fullName>
        <label>Address Room Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <label>Address Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breve_Behavior__c</fullName>
        <label>Breve Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breve_Demographic__c</fullName>
        <label>Breve Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breve_Overall__c</fullName>
        <label>Breve Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Task__c</fullName>
        <label>Campaign Task</label>
        <picklist>
            <picklistValues>
                <fullName>NO TASK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK LO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>AdWords supplier + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dagspressen/Ibladning - fritext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-boxlösningar + fritext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tredjeman - fritext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utländska Postföretag + fritext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 gram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Logistik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3X34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A til B Budservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aditro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Cargo Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beweship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladkompagniet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blå Kurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bussgods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dachser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Registration_Number__c</fullName>
        <label>Corporate Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_expect_to_be_contacted_by_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Information provided by the Lead Identifier</inlineHelpText>
        <label>Customer expect to be contacted by Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Feedback_Sent_Disqualified__c</fullName>
        <label>Date Feedback Sent - Disqualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Feedback_Sent_Qualifed__c</fullName>
        <label>Date Feedback Sent - Qualifed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Allocated_Lead_Phase_Start__c</fullName>
        <label>Date/Time Allocated Lead Phase Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed_Lead_Phase_Start__c</fullName>
        <label>Date/Time Closed Lead Phase Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Qualify_Lead_Phase_Start__c</fullName>
        <label>Date/Time Qualify Lead Phase Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box if you want to mark this lead as deleted</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number_User_ID__c</fullName>
        <label>Employee Number / User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Allocate_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed Allocate Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_talked_to_the_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Information provided by Lead Identifier</inlineHelpText>
        <label>Have you talked to the customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identified_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LC_Start_Date_Time__c</fullName>
        <label>LC Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LC_Stop_Date_Time__c</fullName>
        <label>LC Stop Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Description__c</fullName>
        <label>Lead Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Lead ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier_Country__c</fullName>
        <formula>TEXT(Lead_Identifier__r.Employee_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Identifier Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier_Email__c</fullName>
        <label>Lead Identifier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Identifier</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The lead identifier you are looking for does not exist. Please contact your system administrator.</errorMessage>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>PostNord Org Structure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Phase__c</fullName>
        <label>Lead Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Create Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Qualifier_Status__c</fullName>
        <label>Lead Qualifier Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Behavior__c</fullName>
        <label>Logistics Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Demographic__c</fullName>
        <label>Logistics Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Overall__c</fullName>
        <label>Logistics Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meddelende_Behavior__c</fullName>
        <label>Meddelende Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meddelende_Demographic__c</fullName>
        <label>Meddelende Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meddelende_Overall__c</fullName>
        <label>Meddelende Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Sales_Area__c</fullName>
        <label>Owner Sales Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Behavior__c</fullName>
        <label>Post Nord Programmes Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Demographic__c</fullName>
        <label>Post Nord Programmes Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Overall__c</fullName>
        <label>Post Nord Programmes Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Status__c</fullName>
        <label>Reason For Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Customer unavailable (no response from customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No business for PostNord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other matter (no lead)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead already exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business already exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer need already identified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Message__c</fullName>
        <formula>IF( Failed_Allocate_Assign__c = TRUE,
IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Message&quot;)&amp;&quot; &quot;&amp;&quot;No Customer Responsible rep for this Sales Area - please assign lead manually&quot;,
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;No messages&quot;)&amp;&quot; &quot;&amp;&quot;No messages at this time&quot;)</formula>
        <label>System Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Allocated_Phase__c</fullName>
        <description>Field to be used in reporting to show how long a lead has been in &quot;Allocated&quot; phase</description>
        <formula>Date_Time_Closed_Lead_Phase_Start__c -  Date_Time_Allocated_Lead_Phase_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Allocated Phase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Convert__c</fullName>
        <formula>Date_Time_Closed_Lead_Phase_Start__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Convert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_LC__c</fullName>
        <formula>LC_Stop_Date_Time__c -  LC_Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time with LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Sales_Area__c</fullName>
        <formula>TEXT( $User.Sales_Area1__c )</formula>
        <label>User Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_working_on_this_lead__c</fullName>
        <formula>CASE( Status , 
&apos;Created&apos;, &apos;Sales&apos;, 
&apos;In Progress&apos;, &apos;Lead Central&apos;,
&apos;Needs Analysis&apos;, &apos;Lead Central&apos;,
&apos;Qualified by lead information&apos;, &apos;Lead Central&apos;,
&apos;Qualified by customer contact&apos;, &apos;Lead Central&apos;,
&apos;Allocated&apos;, &apos;Sales&apos;,
&apos;Qualified (convert lead)&apos;, &apos;Closed (Converted)&apos;,
&apos;Disqualified&apos;, &apos;Lead Disqualified by LC&apos;,
&apos;Disqualified by sales&apos;,&apos;Lead Disqualified by Sales&apos;, 
&apos;No Status&apos;)</formula>
        <label>Who is working on this lead?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Scheduled Redial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__CallAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actimizer Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__DialTime__c</fullName>
        <label>Actimizer Redial Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who picked this lead for dialing</description>
        <label>Actimizer Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>LeadsToDial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterestDate__c</fullName>
        <label>Actimizer No Interest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer No Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Notes__c</fullName>
        <label>Actimizer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__RedialPhone__c</fullName>
        <description>Phone number to dial when Dial Reason is set to Agreed Redial</description>
        <label>Actimizer Redial Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__SuccessDate__c</fullName>
        <label>Actimizer Success Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Account_Involved_Party_ID__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Short_Description__c</columns>
        <columns>Lead_Identifier__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Lead_ID__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified (convert lead),Disqualified,Disqualified by sales</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Leads_Including_Actimizer</fullName>
        <columns>FULL_NAME</columns>
        <columns>Account_Involved_Party_ID__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Short_Description__c</columns>
        <columns>Lead_Identifier__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_ID__c</columns>
        <columns>actimizerdialer__CallAttempts__c</columns>
        <columns>actimizerdialer__NoInterest__c</columns>
        <columns>actimizerdialer__NoInterestDate__c</columns>
        <columns>actimizerdialer__Notes__c</columns>
        <columns>actimizerdialer__LockedBy__c</columns>
        <columns>actimizerdialer__DialTime__c</columns>
        <columns>actimizerdialer__RedialPhone__c</columns>
        <columns>actimizerdialer__ActimizerCallback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads Including Actimizer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>Short_Description__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Area__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Identifier__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified (convert lead)</value>
        </filters>
        <label>LC BE-BR</label>
        <language>en_US</language>
        <queue>LC_BE_BR</queue>
    </listViews>
</CustomObject>